<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListadoLibros">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/listado_de_libros"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/leidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leidos"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/noLeido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_leidos"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/todoLib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todos_los_libros"
                android:textSize="20dp"/>

        </RadioGroup>

    </LinearLayout>

    <ListView
        android:id="@+id/listaLib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:textAlignment="center">
    </ListView>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20dp"
        android:onClick="atras2"/>



</LinearLayout>